@@ -30,10 +30,23 @@ drop table if exists apartamentos;
 create table apartamentos (
 	id			int				not	null auto_increment,
 	num			int				not	null unique,
+	idTiposApartametos	int		not null,
 	tipo		ENUM('Executivo', 'Luxo', 'Presidencial')	not null,
 	livre		boolean			default true,
+	foreign key (idTiposApartametos) references tiposApartamentos(id)
+	on delete cascade on delete cascade,
 	primary key(id)
-);
+) ENGINE = InnoDB;
+
+drop table if exists tiposApartamentos;
+
+create table tiposApartamentos (
+	id			int				not	null auto_increment,
+	nome 		varchar(100)	not	null,
+	descricao	text			not null,
+	valor		float			not null,
+	primary key(id)
+) ENGINE = InnoDB;
 
 drop table if exists servicos;
 
